--- a/src/index.html
+++ b/src/index.html
@@ -50,7 +50,8 @@
     </button>
   </div>
   <div id="playerData" style="position: absolute;top: 80px;left: 10px;">
-    <img id="skin" style="position:absolute;top:20px;left:650px;width:120px;height:270px;text-align: left;border-color: transparent;"></img>
+    <img id="skin" hidden="true"
+      style="position:absolute;top:20px;left:650px;width:120px;height:270px;text-align: left;border-color: transparent;"></img>
     <div id="playerName" class="titleFont"
       style="top: 0px;left: 0px;height: 35px;width: 600px;text-align: left;color: rgb(237, 146, 255);"> ↑ Input player
       name here.</div>
