--- a/src/index.html
+++ b/src/index.html
@@ -49,10 +49,11 @@
       <option value="overview">Overview</option>
       <option value="status">Status</option>
       <option value="guild">Guild</option>
-      <option value="bedWar">Bed War</option>
-      <option value="skyWar">Sky War</option>
+      <option value="bw">Bed War</option>
+      <option value="sw">Sky War</option>
       <option value="mm">Murder Mystery</option>
       <option value="duel">Duel</option>
+      <option value="uhc">UHC</option>
     </select>
     <button class="titleitems" onclick="search()"
       style="position: absolute;top: 45px;left: 580px;height: 35px;width: 100px;color: white;">
@@ -65,13 +66,7 @@
     <div id="playerName" class="titleFont"
       style="top: 0px;left: 0px;height: 35px;width: 600px;text-align: left;color: rgb(237, 146, 255);"> ↑ Input player
       name here.</div>
-    <div id="overview" class="infoFont" style="position:absolute;top:40px;width:1000px;text-align: left;"></div>
-    <div id="status" class="infoFont" style="position:absolute;top:40px;width:1000px;text-align: left;"></div>
-    <div id="guild" class="infoFont" style="position:absolute;top:40px;width:1000px;text-align: left;"></div>
-    <div id="bedWar" class="infoFont" style="position:absolute;top:40px;width:1000px;text-align: left;"></div>
-    <div id="skyWar" class="infoFont" style="position:absolute;top:40px;width:1000px;text-align: left;"></div>
-    <div id="mm" class="infoFont" style="position:absolute;top:40px;width:1000px;text-align: left;"></div>
-    <div id="duel" class="infoFont" style="position:absolute;top:40px;width:1000px;text-align: left;"></div>
+    <div id="playerInfo" class="infoFont" style="position:absolute;top:40px;width:1000px;text-align: left;"></div>
   </div>
   <div id="infoPage" style="position:absolute;top:40px;left:10px;width:100%;text-align: left;" hidden>
     <div class="nameFont" style="left:10px;top:0px;width:100%;height: 50px;">Hypixel Overlay</div>
