--- a/src/index.html
+++ b/src/index.html
@@ -54,6 +54,7 @@
       <option value="mm">Murder Mystery</option>
       <option value="duel">Duel</option>
       <option value="uhc">UHC</option>
+      <option value="mw">Mega Wall</option>
     </select>
     <button class="titleitems" onclick="search()"
       style="position: absolute;top: 45px;left: 580px;height: 35px;width: 100px;color: white;">
