--- a/src/index.html
+++ b/src/index.html
@@ -55,9 +55,12 @@
       <option value="duel">Duel</option>
       <option value="uhc">UHC</option>
       <option value="mw">Mega Wall</option>
+      <option value="bb">Build Battle</option>
+      <option value="pit">The Pit</option>
+      <option value="bsg">Blitz Survival Games</option>
     </select>
     <button class="titleitems" onclick="search()"
-      style="position: absolute;top: 45px;left: 580px;height: 35px;width: 100px;color: white;">
+      style="position: absolute;top: 45px;left: 635px;height: 35px;width: 100px;color: white;">
       Search
     </button>
   </div>
