--- a/src/index.html
+++ b/src/index.html
@@ -58,6 +58,7 @@
       <option value="bb">Build Battle</option>
       <option value="pit">The Pit</option>
       <option value="bsg">Blitz Survival Games</option>
+      <option value="arcade">Arcade</option>
     </select>
     <button class="titleitems" onclick="search()"
       style="position: absolute;top: 45px;left: 635px;height: 35px;width: 100px;color: white;">
