--- a/src/index.html
+++ b/src/index.html
@@ -76,9 +76,7 @@
   <div id="infoPage" style="position:absolute;top:40px;left:10px;width:100%;text-align: left;" hidden>
     <div class="nameFont" style="left:10px;top:0px;width:100%;height: 50px;">Hypixel Overlay</div>
     <button class="titleitems" style="position:absolute;top:70px;left:10px;height: 45px;width: 270px;"
-      onclick="openGithub()">
-      View Code on Github
-    </button>
+      onclick="openGithub()">View Code on Github</button>
     <div class="infoFont" style="position:absolute;left:10px;top:125px;width:100%;height:50px;">Author : IAFEnvoy</div>
     <button class="titleitems" style="position:absolute;top:160px;left:10px;height:45px;width:100px;"
       onclick="openGithubHome()">Github</button>
