--- a/src/index.html
+++ b/src/index.html
@@ -8,92 +8,80 @@
   <script src="js/config.js"></script>
   <script src="js/hypixelInfo.js"></script>
   <script src="js/index.js"></script>
-  <link rel="styleSheet" href="nano.min.css" />
-  <link rel="styleSheet" href="abyss.css" />
-  <style>
-    .titleFont {
-      font-size: 30px;
-      font-family: "Minecraftia";
-      color: rgb(237, 146, 255);
-    }
-
-    .nameFont {
-      font-size: 40px;
-      font-family: "Minecraftia";
-      color: rgb(237, 146, 255);
-    }
-
-    .infoFont {
-      font-size: 20px;
-      font-family: "Minecraftia";
-      color: rgb(237, 146, 255);
-    }
-  </style>
+  <link rel="styleSheet" href="style.css" />
   <meta http-equiv="Content-Security-Policy" content="script-src 'self' 'unsafe-inline';" />
-  <!--我也不知道这行干啥用的（）-->
 </head>
 
-<body style="border-radius: 15px;">
+<body>
+  <div id="background" class="background"></div>
   <div id="menu" class="menu">
-    <h1 class="menuitem">Hypixel Overlay</h1>
-    <button name="Quit" class="menuitem" id="quit" onclick="closeWindow()"></button>
-    <button name="Minimize" class="menuitem" id="minimize" onclick="minimize()"></button>
-    <button name="Infomation" class="menuitem" id="info" onclick="openInfo()"></button>
-    <button name="Settings" class="menuitem" id="settings" onclick="openSetting()"></button>
+    <h1>Hypixel Overlay</h1>
+    <div id="buttons" class="buttons">
+      <button id="quit" onclick="closeWindow()">x</button>
+      <button id="minimize" onclick="minimize()">-</button>
+    </div>
   </div>
-  <div id="MainBar">
-    <input class="titleitems" type="text" id="playername"
-      style="position: absolute;top: 42px;left: 5px;height: 35px;text-align:left;text-indent: 10px;color: white;">
-    <select id="mode" class="custom-select_trigger" style="position: absolute;top: 45px;left: 300px;height: 35px;"
-      onchange="changeDiv()">
-      <option value="overview">Overview</option>
-      <option value="status">Status</option>
-      <option value="guild">Guild</option>
-      <option value="bw">Bed War</option>
-      <option value="sw">Sky War</option>
-      <option value="mm">Murder Mystery</option>
-      <option value="duel">Duel</option>
-      <option value="uhc">UHC</option>
-      <option value="mw">Mega Wall</option>
-      <option value="bb">Build Battle</option>
-      <option value="pit">The Pit</option>
-      <option value="bsg">Blitz Survival Games</option>
-      <option value="arcade">Arcade</option>
-    </select>
-    <button class="titleitems" onclick="search()"
-      style="position: absolute;top: 45px;left: 635px;height: 35px;width: 100px;color: white;">
-      Search
-    </button>
+  <div id="startup">
+    <div id="playerinput">
+      <div class="infoFont" style="top:20px">Player Name :</div>
+      <input id="playername" type="text" style="position: absolute;top:55px;left:300px;width: 350px;">
+      <button id="search" style="position: absolute;top:55px;left:670px;width: 80px;height:32px;" onclick="search()">Go
+        !</button>
+    </div>
+    <div id="setapikey">
+      <div class="infoFont" style="top:50px">Hypixel API Key :</div>
+      <input id="apikey" type="text" style="position: absolute;top:90px;left:300px;width: 450px;">
+    </div>
   </div>
-  <div id="playerData" style="position: absolute;top: 80px;left: 10px;">
-    <img id="skin" hidden="true"
-      style="position:absolute;top:20px;left:650px;width:120px;height:270px;text-align: left;border-color: transparent;"></img>
-    <div id="playerName" class="titleFont"
-      style="top: 0px;left: 0px;height: 35px;width: 600px;text-align: left;color: rgb(237, 146, 255);"> ↑ Input player
-      name here.</div>
-    <div id="playerInfo" class="infoFont" style="position:absolute;top:40px;width:1000px;text-align: left;"></div>
-  </div>
-  <div id="infoPage" style="position:absolute;top:40px;left:10px;width:100%;text-align: left;" hidden>
-    <div class="nameFont" style="left:10px;top:0px;width:100%;height: 50px;">Hypixel Overlay</div>
-    <button class="titleitems" style="position:absolute;top:70px;left:10px;height: 45px;width: 270px;"
-      onclick="openGithub()">View Code on Github</button>
-    <div class="infoFont" style="position:absolute;left:10px;top:125px;width:100%;height:50px;">Author : IAFEnvoy</div>
-    <button class="titleitems" style="position:absolute;top:160px;left:10px;height:45px;width:100px;"
-      onclick="openGithubHome()">Github</button>
-    <button class="titleitems" style="position:absolute;top:160px;left:130px;height:45px;width:100px;"
-      onclick="openYoutube()">Youtube</button>
-    <button class="titleitems" style="position:absolute;top:160px;left:250px;height:45px;width:100px;"
-      onclick="openTwitter()">Twitter</button>
-    <button class="titleitems" style="position:absolute;top:160px;left:370px;height:45px;width:100px;"
-      onclick="openBilibili()">Bilibili</button>
-    <div class="infoFont" style="position:absolute;left:10px;top:215px;width:100%;height:50px;">Acknowledge:</div>
-    <div class="infoFont" style="position:absolute;left:30px;top:250px;width:100%;height:50px;">Thank you to <a
-        href="https://crafatar.com">Crafatar</a> for providing avatars.</div>
-  </div>
-  <div id="settingPage" style="position:absolute;top:40px;left:10px;width:100%;text-align: left;" hidden>
-    <div class="nameFont" style="left:10px;top:0px;width:100%;height: 50px;">Settings</div>
-    <div class="infoFont" style="left:10px;top:80px;width:100%;height: 50px;">Hypixel API Key : </div>
-    <input class="titleitems" type="text" id="apiKey"
-      style="position: absolute;top: 50px;left:230px;height:25px;width:500px;text-align:left;text-indent: 10px;">
+  <div id="result" hidden>
+    <div id="baseinfo" style="position: absolute;top:85px;left:10px;width:450px;height: auto;">
+      <div id="playerName" class="dataStyle" style="font-size: 20px;"></div>
+      <div id="networkinfo" class="dataStyle"></div>
+      <div id="guild" class="dataStyle"></div>
+      <div id="status" class="dataStyle"></div>
+      <div></div>
+    </div>
+    <div id="details" style="position: absolute;top:85px;left:470px;width:600px;height: auto;">
+      <div id="bw" class="dataStyle" onclick="showDetail('bw')">
+        <div style="font-size:20px;">Bed Wars</div>
+        <div id="bwdetail"></div>
+      </div>
+      <div id="sw" class="dataStyle" onclick="showDetail('sw')">
+        <div style="font-size:20px;">SkyWars</div>
+        <div id="swdetail"></div>
+      </div>
+      <div id="mm" class="dataStyle" onclick="showDetail('mm')">
+        <div style="font-size:20px;">Murder Mystery</div>
+        <div id="mmdetail"></div>
+      </div>
+      <div id="duel" class="dataStyle" onclick="showDetail('duel')">
+        <div style="font-size:20px;">Duel</div>
+        <div id="dueldetail"></div>
+      </div>
+      <div id="uhc" class="dataStyle" onclick="showDetail('uhc')">
+        <div style="font-size:20px;">UHC</div>
+        <div id="uhcdetail"></div>
+      </div>
+      <div id="mw" class="dataStyle" onclick="showDetail('mw')">
+        <div style="font-size:20px;">Mega Wall</div>
+        <div id="mwdetail"></div>
+      </div>
+      <div id="bb" class="dataStyle" onclick="showDetail('bb')">
+        <div style="font-size:20px;">Build Battle</div>
+        <div id="bbdetail"></div>
+      </div>
+      <div id="pit" class="dataStyle" onclick="showDetail('pit')">
+        <div style="font-size:20px;">The Pit</div>
+        <div id="pitdetail"></div>
+      </div>
+      <div id="bsg" class="dataStyle" onclick="showDetail('bsg')">
+        <div style="font-size:20px;">Blitz Survival Games</div>
+        <div id="bsgdetail"></div>
+      </div>
+      <div id="arcade" class="dataStyle" onclick="showDetail('arcade')">
+        <div style="font-size:20px;">Arcade</div>
+        <div id="arcadedetail"></div>
+      </div>
+    </div>
   </div>
 </body>
