Add skin download

--- a/src/index.html
+++ b/src/index.html
@@ -51,13 +51,16 @@
     </div>
   </div>
   <div id="result" hidden>
-    <div id="baseinfo" style="position: absolute;top:85px;left:10px;width:450px;height: auto;">
+    <div style="position: absolute;top:85px;left:10px;width:450px;height: auto;">
       <div id="playerName" class="dataStyle" style="font-size: 20px;"></div>
       <div id="networkinfo" class="dataStyle"></div>
       <div id="guild" class="dataStyle"></div>
       <div id="status" class="dataStyle"></div>
     </div>
     <div id="details" style="position: absolute;top:85px;left:470px;width:500px;height: auto;"> </div>
-    <img id="skin" style="position: absolute;top:85px;left: 990px;width: 120px;height: 270px;">
+    <div style="position: absolute;top:85px;left: 990px;width: 120px;height: 270px;">
+      <img id="skin">
+      <button style="position:absolute;top:280px;left:-20px;width:160px;height:30px" onclick="downloadSkin()">Download Skin</button>
+    </div>
   </div>
 </body>
