add social media

--- a/src/index.html
+++ b/src/index.html
@@ -61,6 +61,7 @@
     <div style="position: absolute;top:85px;left: 990px;width: 120px;height: 270px;">
       <img id="skin">
       <button style="position:absolute;top:280px;left:-20px;width:160px;height:30px" onclick="downloadSkin()">Download Skin</button>
+      <div id="socialMedia" style="position:absolute;top:320px;left:-20px;width: auto;"></div>
     </div>
   </div>
 </body>
